fix horizontal scrolling issue

--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,7 @@ body {
   align-items:center;
   display:flex;
   flex-direction:column;
+  overflow-x: hidden;
 }
 
 .title {
